[FIX] mass_mailing: fixed background color issue and align issue for mobile in steps snippet
Before this commit, background color was applying in main container, in mobile steps was not responsive

--- a/addons/mass_mailing/static/src/scss/themes/theme_default.scss
+++ b/addons/mass_mailing/static/src/scss/themes/theme_default.scss
@@ -162,7 +162,7 @@ td {
     }
 }
 
-.o_mail_block_steps {
+.o_mail_block_steps .o_mail_snippet_general{
     background-color: $o-mm-def-color-alpha;
 }
 
